--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ height: 100;
 background-color: rgb(11, 133, 189);
 
 }
+.primeirasecao
+
+width: 1000px;
+height: 500;
+background-color: rgb(11, 133, 189);
