--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ height: 100;
 background-color: rgb(11, 133, 189);
 
 }
-.primeirasecao
+.primeirasecao{
 
-width: 1000px;
+    width: 1000px;
 height: 500;
-background-color: rgb(11, 133, 189);
+background-color: rgb(255, 255, 255);
+}
