--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ img {
 
 .primeirasecao {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 1000px;
     height: 500;
     background-color: rgb(255, 255, 255);
